Fix invalid vertical alignment in  the intro animated text

--- a/src/app/portfolio/intro/intro.component.scss
+++ b/src/app/portfolio/intro/intro.component.scss
@@ -2,8 +2,9 @@
 
 #intro-layout {
   background: $backgroundColor url('/assets/background.jpg') no-repeat center center;
-  background-size: cover;
-  padding: 0.1px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   height: 100%;
 }
