--- a/src/app/portfolio/page-title/page-title.component.css
+++ b/src/app/portfolio/page-title/page-title.component.css
@@ -1,5 +1,4 @@
 h1{
     color: white;
-    margin-top: 40%;
-    text-align: center;
+    align-self: center;
 }
